fixed margin of social media icons to align with horizontal elements

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -672,6 +672,7 @@ ul {
 }
 .footer-navigation__list--social {
   writing-mode: vertical-lr;
+  margin-top: -20px;
 }
 .footer-navigation__social {
   position: absolute;
